| Summary: | ASTERISK-25441: Deadlock in res_sorcery_memory_cache. | ||
| Reporter: | Richard Mudgett (rmudgett) | Labels: | |
| Date Opened: | 2015-10-01 16:47:55 | Date Closed: | 2015-10-02 16:29:56 |
| Priority: | Major | Regression? | |
| Status: | Closed/Complete | Components: | Resources/General |
| Versions: | 13.5.0 | Frequency of Occurrence | Occasional |
| Related Issues: | |||
| Environment: | Attachments: | ||
| Description: | A deadlock can happen when a sorcery object is being expired from the memory cache when at the same time another object is being placed into the memory cache. There are a couple other variations on this theme that could cause the deadlock. Basically if an object is being expired from the sorcery memory cache at the same time as another thread tries to update the next object expiration timer the deadlock can happen. | ||
| Comments: | By: Richard Mudgett (rmudgett) 2015-10-01 17:36:52.741-0500 Reviews up on gerrit: https://gerrit.asterisk.org/#/c/1354/ and https://gerrit.asterisk.org/#/c/1355/ v13 https://gerrit.asterisk.org/#/c/1359/ and https://gerrit.asterisk.org/#/c/1360/ master https://gerrit.asterisk.org/#/c/1364/ and https://gerrit.asterisk.org/#/c/1365/ certified v13.1 | ||